--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,8 @@
 fastapi>=0.115.0
 uvicorn[standard]>=0.32.0
 pydantic>=2.10.0
+pydantic-settings>=2.0.0
 python-multipart>=0.0.20
 python-dotenv>=1.0.0
+sqlalchemy>=2.0.0
+pytz>=2024.1
