--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,11 +1,24 @@
-# Database
+# Database Configuration
+# For SQLite (development):
 DATABASE_URL=sqlite:///./appointments.db
+# For PostgreSQL (production):
+# DATABASE_URL=postgresql://user:password@host:5432/dbname
 
 # Application Environment
 APP_ENV=development
+# Options: development, production, test
+
+# Application Metadata
+APP_NAME=Healthcare Appointment API
+APP_VERSION=1.0.0
 
 # Timezone
 TIMEZONE=America/Toronto
 
-# CORS Origins (JSON array format, e.g., ["http://localhost:3000"])
+# CORS Origins
+# For local development:
 CORS_ORIGINS=["http://localhost:3000"]
+# For production, use your domain:
+# CORS_ORIGINS=["https://yourdomain.com"]
+# For multiple origins:
+# CORS_ORIGINS=["https://yourdomain.com", "https://www.yourdomain.com"]
