--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "dev": "concurrently \"pnpm --filter './frontend' dev\" \"cd backend && source venv/bin/activate && uvicorn main:app --reload --port 8000\"",
     "dev:frontend": "pnpm --filter './frontend' dev",
     "dev:backend": "cd backend && source venv/bin/activate && uvicorn main:app --reload --port 8000",
-    "build": "pnpm --filter './frontend' build"
+    "build": "pnpm --filter './frontend' build",
+    "build:backend": "cd backend && python __init__db.py",
+    "start:frontend": "pnpm --filter './frontend' start",
+    "start:backend": "cd backend && source venv/bin/activate && uvicorn main:app --host 0.0.0.0 --port 8000",
+    "docker:build": "docker-compose build",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "docker:restart": "docker-compose restart"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
